# datasetpeek

./: .gitignore  CHANGELOG.md  Makefile  README.md  agents.md  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/routes/: __init__.py  home.py  profile.py
app/services/: __init__.py  file_reader.py  heuristics.py  profiler.py  s3_reader.py  session_store.py  settings.py
app/static/: styles.css
app/templates/: base.html  home.html
docs/: PRD.md  branch-protection-plan.md
infra/github/: .gitignore  main.tf  variables.tf
tests/: test_app.py  test_s3_reader.py  test_settings.py
